# customer-churn-mlops

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
.dvc/: config
.github/workflows/: cd.yml  ci.yml
configs/: feature_config.yaml  model_config.yaml  monitoring_config.yaml  training_config.yaml
dashboards/: streamlit_app.py
docker/: .dockerignore  Dockerfile  Dockerfile.streamlit  docker-compose.yml  prometheus.yml
docker/grafana/provisioning/dashboards/: dashboard.yaml
docker/grafana/provisioning/dashboards/json/: churn_monitoring.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MONITORING.md
models/conformal/: conformal_meta.json
notebooks/: 01_eda_and_business_analysis.py  02_feature_engineering_experiments.ipynb  02_feature_engineering_experiments.py  03a_algorithm_scan.py  03b_hyperparameter_tuning.py  03c_champion_evaluation.py
scripts/: generate_drift_report.py  prepare_feast_data.py  run_benchmarks.py  save_reference_data.py  train_conformal.py  train_uplift.py
src/data/: ingest.py  preprocess.py  validate.py
src/features/: feature_selector.py  feature_store.py
src/features/feast_repo/: feature_store.yaml  features.py
src/models/: calibration_diagnostics.py  conformal.py  evaluate.py  fairness_audit.py  ft_transformer_wrapper.py  hpo.py  learning_curves.py  pipeline.py  statistical_comparison.py  tabpfn_wrapper.py  threshold.py  train.py  uplift.py
src/monitoring/: __init__.py  drift_detector.py  reference_builder.py
src/serving/: __init__.py  api.py  model_loader.py  schemas.py
src/utils/: config_loader.py  logging.py
tests/: conftest.py
tests/data_tests/: test_data_validation.py
tests/integration/: test_api.py
tests/unit/: test_advanced_models.py  test_config_loader.py  test_drift_detector.py  test_evaluate.py  test_feature_store.py  test_ingest.py  test_logging.py  test_pipeline.py  test_preprocess.py  test_reference_builder.py  test_schemas.py  test_threshold.py  test_validate.py
