[project]
name = "customer-churn-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for customer churn prediction"
authors = [
    {name = "Deepak Jangra"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.2,<3)",
    "numpy (>=1.26,<2)",
    "scikit-learn (>=1.5,<2)",
    "scipy (>=1.8,<1.17)",
    "shap (>=0.44,<0.51)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "catboost (>=1.2.10,<2.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "pandera (>=0.30.1,<0.31.0)",
    "great-expectations (>=1.15.2,<2.0.0)",
    "mlflow (>=3.10.1,<4.0.0)",
    "dagshub (>=0.6.9,<0.7.0)",
    "prefect (>=3.6.25,<4.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.43.0,<0.44.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "evidently (>=0.7.21,<0.8.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "dvc[s3] (>=3.67.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "optuna (>=4.8.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.5.5,<8.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "kaggle (>=2.0.0,<3.0.0)",
    "jupytext (>=1.19.1,<2.0.0)",
    "types-pyyaml (>=6.0.12.20260408,<7.0.0.0)"
]
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | notebooks
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip_glob = ["notebooks/*"]


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "notebooks",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
